--- a/src/app/actividad-detalle/actividad-detalle.component.html
+++ b/src/app/actividad-detalle/actividad-detalle.component.html
@@ -18,17 +18,17 @@
 
 <body>
   <div class="page">
-  <app-navbar></app-navbar>
-  <div id="content-wrapper" class="d-flex flex-column">
-    <div id="content">
-      <div class="container-fluid" style="width: 1000px; ">
-        <section class="section section-container">
-          <div class="box" *ngFor="let act of actividad$.data">
-            <div class="row" style="margin-bottom: 2%;">
-              <div class="col-2" style="margin-left: 5%;">
+    <app-navbar></app-navbar>
+    <div id="content-wrapper" class="d-flex flex-column">
+      <div class="content">
+          <section class="section section-container" style="padding-bottom: 10px;">
+            <div class="box" *ngFor="let act of actividad$.data">
+            <div class="row" style="margin-bottom: 1%;margin-top:1%;">
+              <div class="col-2" style="margin-left: 5%; margin-top:1%;">
                 <button type="button" (click)="BackOT(act.ordenTrabajo)">
                   <img  src="../assets/icons/svg/workflow3_c.svg"  width="72" class="d-inline-block align-center" alt="">
-                 Volver a OT
+                  <br>
+                  Volver a OT
                 </button>
               </div>
               <div class="col-6">
@@ -52,7 +52,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" style="margin-bottom:5%;">
               <div class="col-10" style="color:#4C4C4E; padding-left: 10%;">
                 <div class="list-group" style="border: transparent;">
                   <div class="list-group-item" style="border: transparent; background-color:#f8f9f9;">
@@ -192,7 +192,7 @@
 
                   <div class="list-group-item" *ngIf="!editCosto" style="border: transparent; background-color:#f8f9f9;">
                     <ul class="list-group list-group-horizontal" style="background-color:#f4f4f4;">
-                      <li class="list-group-item" style="width: 600px; border: transparent; background-color:transparent;">Costo ($):<br> {{act.costo}} 
+                      <li class="list-group-item" style="width: 600px; border: transparent; background-color:transparent;">Costo ($):<br> {{act.costo}}
                       </li>
                       <button type="button" class="btn btn-sm" (click)="Edit('costo')">
                          <img  src="../assets/icons/svg/edit(2).svg"  width="20" class="d-inline-block align-center" alt="">
@@ -225,5 +225,4 @@
       </div>
     </div>
   </div>
-</div>
 </body>
