--- a/src/app/add-motocicleta/add-motocicleta.component.html
+++ b/src/app/add-motocicleta/add-motocicleta.component.html
@@ -19,15 +19,15 @@
 <body>
   <div class="page">
     <div id="content-wrapper">
-      <div id="content">
+      <div class="content">
         <div class="row">
           <div class="col-6" center>
             <section class="section section-container" style="padding-bottom: 10px;">
               <div class="box">
-                <h2>Agregar nueva actividad</h2>
+                <h2 style="margin-top:2%;" >Agregar nueva actividad</h2>
                 <form [formGroup]="Motocicletaform">
                   <div class="field">
-                    <div class="row" style="margin-left: 10%;">
+                    <div class="row">
                       <div class="col-2">
                         <img  src="../assets/icons/svg/motorbike_c.png"  width="72" class="d-inline-block align-center" alt="">
                       </div>
@@ -66,7 +66,7 @@
                   </div>
                   <div class="field">
                     <div class="control">
-                      <button class="button is-success"  style="  margin-left: 70%;" (click)="onSubmit(Motocicletaform.value)">
+                      <button class="btn btn-success"  style="  margin-left: 70%;" (click)="onSubmit(Motocicletaform.value)">
                         Guardar
                       </button>
                     </div>
@@ -83,21 +83,21 @@
                     <img  src="../assets/icons/svg/motocross_c.svg"  width="72" class="d-inline-block align-center" alt="">
                   </div>
                   <div class="col-8">
-                    <h3>Listado de Motocicletas</h3>
+                    <h2 style="margin-top:2%;">Listado de Motocicletas</h2>
                   </div>
                 </div>
                 <div class="table-responsive" style="align-content: center;">
-                  <table class="table table-bordered" style="width:60%; margin-top: 2%;margin-left: 20%;">
-                    <thead class="thead-danger">
-                      <tr class="table-danger">
-                        <th scope="col">#</th>
-                        <th scope="col">Marca</th>
-                        <th scope="col">Modelo</th>
+                  <table class="table table-bordered" style="width:60%; margin-top: 2%;">
+                    <thead>
+                      <tr>
+                        <th class="col-1">#</th>
+                        <th class="col-2">Marca</th>
+                        <th class="col-2">Modelo</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr *ngFor="let mo of moto$.data; let i=index">
-                        <th class="table-danger" style="text-align: center;" scope="row">{{i}}</th>
+                        <th style="text-align: center;" scope="row">{{i}}</th>
                         <td>{{mo.marca}}</td>
                         <td>{{mo.modelo}}</td>
                       </tr>
