--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -164,5 +164,15 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="row">
+        <div class="col-9">
+          <img style="width:60px !important; padding-top:0.5%; margin-left:5%;" src="./assets/img/rozto-logo.png" alt=""/>
+        </div>
+        <div class="col-3">
+          <img style="width:160px !important; margin-left:50% !important;" src="./assets/img/Imagotipo horizontal.png"alt=""/>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
