--- a/src/app/add-new-product/add-new-product.component.scss
+++ b/src/app/add-new-product/add-new-product.component.scss
@@ -3,16 +3,21 @@ body, html {
 }
 
 .page{
-  	background-image: transparent;
+  	background-image: url("/assets/img/background3.jpg");
   	position: absolute;
   	top: auto;
   	left: 0;
-  	/* Preserve aspet ratio */
   	min-width: 100%;
-  	min-height: 100%;
-  	background-position: center;
-  	background-repeat: no-repeat;
-  	background-size: cover;
+    min-height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.content{
+  padding-top: 2%;
+  position: absolute;
+  left:20%;
+  width: 65%;
 }
 
 .box{
@@ -32,13 +37,6 @@ img{
   margin-top: 2%;
   margin-bottom: 2%;
   margin-left: 20%;
-}
-
-.content{
-  padding-top: 2%;
-  width: 65%;
-  left:20%;
-  position: relative;
 }
 
 h1{
