--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -17,7 +17,30 @@
 </head>
 
 <body>
-	<div class="page">
-		<app-navbar></app-navbar>
+  <div class="page">
+    <app-navbar></app-navbar>
+    <div class="content">
+      <div class="row">
+        <div class="col-6">
+          <div class="box">
+            <div class="card shadow mb-4">
+              <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">Area Chart</h6>
+              </div>
+              <div class="card-body">
+                <div class="chart-area">
+                  <canvas id="myLineChart"></canvas>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="box">
+            <h1>Holaa</h1>
+          </div>
+        </div>
+      </div>
+    </div>
 	</div>
 </body>
