--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -51,3 +51,12 @@ td{
     font-family: Monaco;
     text-align: center;
 }
+
+footer {
+  background-color: rgba(242, 243, 244, 0.35);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  color: white;
+}
