--- a/src/app/new/new.component.scss
+++ b/src/app/new/new.component.scss
@@ -4,15 +4,24 @@ body, html {
 
 .page{
   	background-image: url("/assets/img/background3.jpg");
-  	position: fixed;
+  	position: absolute;
   	top: 0;
   	left: 0;
-  	/* Preserve aspet ratio */
   	min-width: 100%;
-  	min-height: 100%;
-  	background-position: center;
-  	background-repeat: no-repeat;
-  	background-size: cover;
+    min-height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.field{
+  padding-left: 5%;
+  margin-bottom: 2%;
+}
+.content{
+  background-color: rgba(242, 243, 244, 0.35);
+  width: 100%;
+  height: auto;
+  color: white;
 }
 
 .button-content{
