--- a/src/app/cliente-detalle/cliente-detalle.component.html
+++ b/src/app/cliente-detalle/cliente-detalle.component.html
@@ -24,8 +24,8 @@
           <section class="section section-container" style="padding-bottom: 15px;">
             <div class="box">
               <div class="row" style="padding-left: 10%;">
-                <div class="col-1">
-                  <img  src="../assets/icons/svg/motorcyclist2_c.svg"  width="72" class="d-inline-block align-center" alt="">
+                <div class="col-2">
+                  <img  src="../assets/icons/svg/motorcyclist2_c.svg"  width="72" alt="">
                 </div>
                 <div class="col-8">
                   <br>
