--- a/src/app/cliente-detalle/cliente-detalle.component.scss
+++ b/src/app/cliente-detalle/cliente-detalle.component.scss
@@ -4,7 +4,7 @@ body, html {
 
 .page{
   	background-image: url("/assets/img/background3.jpg");
-  	position: fixed;
+  	position: absolute;
   	top: 0;
   	left: 0;
   	/* Preserve aspet ratio */
@@ -18,17 +18,17 @@ body, html {
 section{
 	position: center;
 }
-
-img{
-  padding: 5%;
-  margin-top: 20%;
-  margin-bottom: 20%;
-  margin-left: 190%;
+.col-2 img{
+  text-align: center !important;
+  margin-left: 25%;
+  margin-right: 25%;
+  margin-top: 10%;
 }
+
 
 .content{
   padding-top: 3%;
-  position: fixed;
+  position: relative;
   left:20%;
   width: 65%;
 }
@@ -48,11 +48,11 @@ h1{
 }
 
 h2{
-	color: #4C4C4E;
-	text-decoration: bold;
-	font-family: Monaco;
-	text-align: center;
-	font-weight: bold;
+  color: #4C4C4E;
+  text-decoration: bold;
+  font-family: Monaco;
+  text-align: center;
+  font-weight: bold;
 }
 
 label{
