--- a/src/app/ficha/ficha.component.scss
+++ b/src/app/ficha/ficha.component.scss
@@ -54,11 +54,12 @@ label{
 }
 
 table{
-  width: 980px !important;
+  width: auto !important;
   border-collapse: collapse;
   border-radius: 1em;
   overflow: hidden;
   margin-left: 5% !important;
+  margin-right: 5% !important;
   margin-top: 2%;
 }
 
