--- a/src/app/orden-trabajo/orden-trabajo.component.html
+++ b/src/app/orden-trabajo/orden-trabajo.component.html
@@ -71,14 +71,14 @@
                               </div>
                             </div>
                             <div class="col-3">
-                              <label style="font-size: 14px;">Deja Motocicleta?</label>
+                              <label style="font-size: 14px;">Entrega</label>
                               <div class="col-5">
-                                <button class="btn btn-warning" style="width:140px;" (click)="DejaMoto()">
-                                  <label *ngIf=!dejaMoto style="color:#f9a825 ">Si</label>
-                                  <label *ngIf=dejaMoto style="color:white">Si</label>
-                                  <label  style="color:gray">/</label>
-                                  <label *ngIf=!dejaMoto style="color:white">No</label>
-                                  <label *ngIf=dejaMoto style="color:#f9a825 ">No</label>
+                                <button class="btn btn-warning" style="width:200px;" (click)="DejaMoto()">
+                                  <label *ngIf=!dejaMoto style="color:#f9a825 ">Instalar </label>
+                                  <label *ngIf=dejaMoto style="color:white">Instalar </label>
+                                  <label  style="color:#f9a825"> / </label>
+                                  <label *ngIf=!dejaMoto style="color:white"> Despachar</label>
+                                  <label *ngIf=dejaMoto style="color:#f9a825"> Despachar</label>
                                 </button>
                               </div>
                             </div>
