--- a/src/app/actividad-detalle/actividad-detalle.component.scss
+++ b/src/app/actividad-detalle/actividad-detalle.component.scss
@@ -22,6 +22,10 @@ body, html {
   width: 65%;
 }
 
+input[type=number]{
+    width: 80px;
+} 
+
 footer {
   	background-color: rgba(242, 243, 244, 0.35);
   	position: absolute;
