--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -21,11 +21,11 @@
     <app-navbar></app-navbar>
     <div class="content">
       <div class="row">
-        <div class="col-6">
+        <div class="col-8">
           <div class="box">
             <div class="card shadow mb-4">
               <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">Area Chart</h6>
+                <h6 class="m-0 font-weight-bold text-primary">Flujo de demanda por producto mensual</h6>
               </div>
               <div class="card-body">
                 <div class="chart-area">
@@ -35,12 +35,41 @@
             </div>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-4">
+          <div class="row">
           <div class="box">
-            <h1>Holaa</h1>
+             <div class="card border-left-primary shadow h-100 py-2">
+              <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                  <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Mes de máxima demanda</div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800">{{MesMaxDemanda}}</div>
+                  </div>
+                  <div class="col-auto">
+                    <img  src="../assets/icons/svg/motorbike_c.png"  width="72" class="d-inline-block align-center" alt="">
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+        <div class="row" style="padding-top: 5%; height: auto;">
+          <div class="box">
+            <div class="card shadow mb-4">
+              <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">Despacho vs Instalaciones</h6>
+              </div>
+              <div class="card-body">
+                <div class="chart-area">
+                  <canvas id="myChart2"></canvas>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
       </div>
+
     </div>
 	</div>
 </body>
