--- a/src/app/ficha-ind/ficha-ind.component.html
+++ b/src/app/ficha-ind/ficha-ind.component.html
@@ -23,9 +23,9 @@
       <div class="content">
           <section class="section section-container" style="padding-bottom: 15px;">
             <div class="box">
-            <div class="row" style="margin-bottom: 2%;">
-              <div class="col-2-sm" style="margin-left: 5%;">
-                <img  src="../assets/icons/svg/profile_c.svg"  width="72" class="d-inline-block align-center" alt="">
+            <div class="row" style="margin-bottom: 2%; padding-left: 10%;">
+              <div class="col-2">
+                <img  src="../assets/icons/svg/profile_c.svg"  width="72" align="middle" alt="">
               </div>
               <div class="col-8">
                 <br>
