--- a/src/app/ficha-ind/ficha-ind.component.scss
+++ b/src/app/ficha-ind/ficha-ind.component.scss
@@ -26,11 +26,11 @@ body, html {
   position: relative;
 }
 
-.col-2-sm img{
-  padding: 5%;
-  margin-top: 20%;
-  margin-bottom: 20%;
-  margin-left: 190%;
+.col-2 img{
+  text-align: center !important;
+  margin-left: 25%;
+  margin-right: 25%;
+  margin-top: 10%;
 }
 
 h1{
