Nuevas correcciones analisis estadistico

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,7 +28,7 @@
                 <img color="primary" src="./assets/icons/svg/user.svg"  width="22" class="d-inline-block align-center" alt="" />
               </span>
             </div>
-            <input type="text" class="form-control"  formControlName="email" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+            <input type="text" class="form-control"  formControlName="username" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
           </div>
           <div class="input-group mb-3">
             <div class="input-group-prepend">
