--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -20,11 +20,68 @@
   <div class="page">
     <app-navbar></app-navbar>
     <div class="content">
-      <div class="row">
+
+      <div class="row">   
+        <div class="col">
+          <div class="box">
+            <div class="card border-left-primary shadow h-100 py-2">
+              <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                  <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Modelo de motocicleta con máxima demanda</div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800">{{motoLabel[0]}}</div>
+                  </div>
+                  <div class="col-auto">
+                    <img  src="../assets/icons/svg/motocross_c.svg"  width="72" class="d-inline-block align-center" alt="">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="box">
+            <div class="card border-left-primary shadow h-100 py-2">
+              <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                  <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Producto con máxima demanda</div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800">{{tipoLabel[0]}}</div>
+                  </div>
+                  <div class="col-auto">
+                    <img  src="../assets/icons/svg/work_c.svg "  width="72" class="d-inline-block align-center" alt="">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="box">
+            <div class="card border-left-primary shadow h-100 py-2">
+              <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                  <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Mes de máxima demanda</div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800">{{MesMaxDemanda}}</div>
+                  </div>
+                  <div class="col-auto">
+                    <img  src="../assets/icons/svg/helmet_c.svg"  width="72" class="d-inline-block align-center" alt="">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row" style="margin-top: 2%;">
         <div class="col-8">
           <div class="box">
-            <div class="card shadow mb-4">
-              <div class="card-header py-3">
+            <div class="card shadow mb-8">
+              <div class="card-header py-4">
                 <h6 class="m-0 font-weight-bold text-primary">Flujo de demanda por producto mensual</h6>
               </div>
               <div class="card-body">
@@ -35,40 +92,110 @@
             </div>
           </div>
         </div>
-        <div class="col-4">
-          <div class="row">
+
+        <div class="col" style="margin-top: 1%;">
           <div class="box">
-             <div class="card border-left-primary shadow h-100 py-2">
-              <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                  <div class="col mr-2">
-                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Mes de máxima demanda</div>
-                    <div class="h5 mb-0 font-weight-bold text-gray-800">{{MesMaxDemanda}}</div>
-                  </div>
-                  <div class="col-auto">
-                    <img  src="../assets/icons/svg/motorbike_c.png"  width="72" class="d-inline-block align-center" alt="">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row" style="padding-top: 5%; height: auto;">
-          <div class="box">
-            <div class="card shadow mb-4">
-              <div class="card-header py-3">
+            <div class="card shadow mb-2">
+              <div class="card-header py-2">
                 <h6 class="m-0 font-weight-bold text-primary">Despacho vs Instalaciones</h6>
               </div>
               <div class="card-body">
                 <div class="chart-area">
-                  <canvas id="myChart2"></canvas>
+                  <canvas id="ChartDespachaInstala"></canvas>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        </div>
       </div>
+      
+      <div class="row" style="margin-top: 2%;">
+        <div class="col-4">
+          <div class="card shadow mb-6">
+            <div class="card-header py-8">
+              <div class="row">
+                <div class="col-8">
+                  <h6 class="m-0 font-weight-bold text-primary" style="padding-top:5%;">Demanda Motocicletas</h6>
+                </div>
+              </div>
+            </div>
+            <div class="card-body">
+              <div class="chart-pie pt-8">
+                <canvas id="ChartMoto"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-4">
+          <div class="card shadow mb-4">
+            <div class="card-header py-3">
+              <div class="row">
+                <div class="col-8">
+                  <h6 class="m-0 font-weight-bold text-success" style="padding-top:5%;">Demanda Productos</h6>
+                </div>
+              </div>
+            </div>
+            <div class="card-body">
+              <div class="chart-pie pt-4">
+                <canvas id="TipoChart"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-4">
+          <div class="card shadow mb-4">
+            <div class="card-header py-3">
+              <div class="row">
+                <div class="col-8">
+                  <h6 class="m-0 font-weight-bold text-info" style="padding-top:5%;">Ubicación de demanda</h6>
+                </div>
+              </div>
+            </div>
+            <div class="card-body">
+              <div class="chart-pie pt-4">
+                <canvas id="ComunaChart"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-4">
+          <div class="card shadow mb-4">
+            <div class="card-header py-3">
+              <div class="row">
+                <div class="col-8">
+                  <h6 class="m-0 font-weight-bold text-info" style="padding-top:5%;">Prioridades</h6>
+                </div>
+              </div>
+            </div>
+            <div class="card-body">
+              <div class="chart-pie pt-4">
+                <canvas id="ChartPrioridad"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="box">
+            <div class="card shadow mb-8">
+              <div class="card-header py-4">
+                <h6 class="m-0 font-weight-bold text-primary">Costos promedios</h6>
+              </div>
+              <div class="card-body">
+                <div class="chart-area">
+                  <canvas id="LineChartCost"></canvas>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+
 
     </div>
 	</div>
