--- a/src/app/charts/charts.component.scss
+++ b/src/app/charts/charts.component.scss
@@ -3,16 +3,14 @@ body, html {
 }
 
 .page{
-    background-image: url("/assets/img/background3.jpg");
-    position: absolute;
-    top: 0;
-    left: 0;
-    /* Preserve aspet ratio */
-    min-width: 100%;
-    min-height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url("/assets/img/background3.jpg");
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+  background-repeat: repeat;
+  background-size: cover;
 }
 
 section{
@@ -21,9 +19,9 @@ section{
 
 .content{
   padding-top: 3%;
-  position: fixed;
-  left:5%;
-  width: 90%;
+  width: 75%;
+  left:12%;
+  position: relative;
 }
 
 h1{
