--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,45 +20,8 @@
   <div class="page">
     <app-navbar></app-navbar>
     <div class="row">
-      <div class="col-5" style="padding-left:5%; padding-top:2.5%;">
-        <div class="card">
-          <div class="card shadow mb-4">
-            <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">Ordenes de trabajo:</h6>
-            </div>
-            <div class="card-body" *ngFor="let ot of ordenTrabajoAct$.data; let i=index">
-              <h4 class="small font-weight-bold">OT{{ot.ordenTrabajo}}: {{ot.nombre}} {{ot.apellido_p}} {{ot.apellido_m}}
-                <span class="float-right">{{otPorc[i].porcentaje}}%</span>
-              </h4>
-              <div class="progress">
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >0" role="progressbar" style="width:1%; background-color:#da4f4a;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >5" role="progressbar" style="width:5%; background-color:#da4f4a;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >10" role="progressbar" style="width:5%; background-color:#e66f4b;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >15" role="progressbar" style="width:5%; background-color:#e66f4b;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >20" role="progressbar" style="width:5%; background-color:#f08e52;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >25" role="progressbar" style="width:5%; background-color:#f08e52;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >30" role="progressbar" style="width:5%; background-color:#f6ac5e;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >35" role="progressbar" style="width:5%; background-color:#f6ac5e;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >40" role="progressbar" style="width:5%; background-color:#fbc971;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >45" role="progressbar" style="width:5%; background-color:#fbc971;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >50" role="progressbar" style="width:5%; background-color:#ffe68a;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >55" role="progressbar" style="width:5%; background-color:#e2dd7a;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >60" role="progressbar" style="width:5%; background-color:#e2dd7a;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >65" role="progressbar" style="width:5%; background-color:#c4d46d;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >70" role="progressbar" style="width:5%; background-color:#c4d46d;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >75" role="progressbar" style="width:5%; background-color:#a4cb64;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >80" role="progressbar" style="width:5%; background-color:#a4cb64;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >85" role="progressbar" style="width:5%; background-color:#82c15e;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >90" role="progressbar" style="width:5%; background-color:#82c15e;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >95" role="progressbar" style="width:5%; background-color:#5ab75c;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >98" role="progressbar" style="width:4%; background-color:#5ab75c;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-6" style="padding-left:5%; padding-top:2.5%;">
+      <div class="col"></div>
+      <div class="col-8" style="padding-left:5%; padding-top:2.5%;">
         <div class="row" style="margin-top:10px;">
           <div class="col-xl-4 col-md-6 mb-4">
             <div class="card border-left-primary shadow h-100 py-2">
@@ -107,63 +70,53 @@
               </div>
             </div>
           </div>
-
         </div>
-
-        <div class="row" style="margin-top:10px;">
-          <div class="col-xl-4 col-lg-5">
-            <div class="card shadow mb-6">
-              <div class="card-header py-8">
-                <div class="row">
-                  <div class="col-8">
-                    <h6 class="m-0 font-weight-bold text-primary" style="padding-top:5%;">Demanda Motocicletas</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="card-body">
-                <div class="chart-pie pt-8">
-                  <canvas id="myChart"></canvas>
-                </div>
-              </div>
+      </div>
+      <div class="col"></div>
+    </div>
+    <div class="row" style="margin-bottom: 80px;">
+      <div class="col"></div>
+      <div class="col-8" style="padding-left:5%; padding-top:2.5%;">
+        <div class="card">
+          <div class="card shadow mb-4">
+            <div class="card-header py-3">
+              <h6 class="m-0 font-weight-bold text-primary">Ordenes de trabajo:</h6>
             </div>
-          </div>
-
-          <div class="col-xl-4 col-lg-5">
-            <div class="card shadow mb-4">
-              <div class="card-header py-3">
-                <div class="row">
-                  <div class="col-8">
-                    <h6 class="m-0 font-weight-bold text-success" style="padding-top:5%;">Demanda Productos</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="card-body">
-                <div class="chart-pie pt-4">
-                  <canvas id="TipoChart"></canvas>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xl-4 col-lg-5">
-            <div class="card shadow mb-4">
-              <div class="card-header py-3">
-                <div class="row">
-                  <div class="col-8">
-                    <h6 class="m-0 font-weight-bold text-info" style="padding-top:5%;">Ubicación de demanda</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="card-body">
-                <div class="chart-pie pt-4">
-                  <canvas id="ComunaChart"></canvas>
-                </div>
+            <div class="card-body" *ngFor="let ot of ordenTrabajoAct$.data; let i=index">
+              <h4 class="small font-weight-bold">OT{{ot.ordenTrabajo}}: {{ot.nombre}} {{ot.apellido_p}} {{ot.apellido_m}}
+                <span class="float-right">{{otPorc[i].porcentaje}}%</span>
+              </h4>
+              <div class="progress">
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >0" role="progressbar" style="width:1%; background-color:#da4f4a;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >5" role="progressbar" style="width:5%; background-color:#da4f4a;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >10" role="progressbar" style="width:5%; background-color:#e66f4b;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >15" role="progressbar" style="width:5%; background-color:#e66f4b;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >20" role="progressbar" style="width:5%; background-color:#f08e52;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >25" role="progressbar" style="width:5%; background-color:#f08e52;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >30" role="progressbar" style="width:5%; background-color:#f6ac5e;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >35" role="progressbar" style="width:5%; background-color:#f6ac5e;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >40" role="progressbar" style="width:5%; background-color:#fbc971;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >45" role="progressbar" style="width:5%; background-color:#fbc971;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >50" role="progressbar" style="width:5%; background-color:#ffe68a;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >55" role="progressbar" style="width:5%; background-color:#e2dd7a;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >60" role="progressbar" style="width:5%; background-color:#e2dd7a;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >65" role="progressbar" style="width:5%; background-color:#c4d46d;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >70" role="progressbar" style="width:5%; background-color:#c4d46d;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >75" role="progressbar" style="width:5%; background-color:#a4cb64;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >80" role="progressbar" style="width:5%; background-color:#a4cb64;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >85" role="progressbar" style="width:5%; background-color:#82c15e;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >90" role="progressbar" style="width:5%; background-color:#82c15e;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >95" role="progressbar" style="width:5%; background-color:#5ab75c;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                <div class="progress-bar" *ngIf="otPorc[i].porcentaje >98" role="progressbar" style="width:4%; background-color:#5ab75c;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="col"></div>
     </div>
+
+
     <footer>
       <div class="row">
         <div class="col-9">
