--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,18 +1,24 @@
+
 .page{
-    background-image: url("/assets/img/background3.jpg");
-    position: absolute;
-    top: 0;
-    min-width: 100%;
-    left: 0;
-    /* Preserve aspet ratio */
-    min-height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    overflow-x: auto !important;
+  background-image: url("/assets/img/background3.jpg");
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+  background-repeat: repeat;
+  background-size: cover;
+}
+
+.content{
+  padding-top: 3%;
+  width: 65%;
+  left:20%;
+  position: relative;
 }
 
 section{
-    position: center;
+      position: fixed;
 }
 
 .box{
