--- a/src/app/add-motocicleta/add-motocicleta.component.html
+++ b/src/app/add-motocicleta/add-motocicleta.component.html
@@ -24,7 +24,7 @@
           <div class="col-6" center>
             <section class="section section-container" style="padding-bottom: 10px;">
               <div class="box">
-                <h2 style="margin-top:2%;" >Agregar nueva actividad</h2>
+                <h2 style="margin-top:2%;" >Agregar nueva motocicleta</h2>
                 <form [formGroup]="Motocicletaform">
                   <div class="field">
                     <div class="row">
