--- a/src/app/add-motocicleta/add-motocicleta.component.scss
+++ b/src/app/add-motocicleta/add-motocicleta.component.scss
@@ -20,10 +20,11 @@ body, html {
   width: 65%;
 }
 
+
 .box{
-	border: 1px solid #34495e !important;
-	background-color: #f8f9f9;
-  width: auto;
+  border: 1px solid !important;
+  border-radius: 5%;
+  background-color: #f8f9f9;
 }
 
 .field{
@@ -60,10 +61,7 @@ label{
 	font-family: Monaco;
 }
 
-.box{
-	border: 1px solid #FF0022 !important;
-	background-color: #f8f9f9;
-}
+
 
 table{
   width: auto !important;
