--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -86,7 +86,7 @@
               </div>
               <div class="card-body">
                 <div class="chart-area">
-                  <canvas id="myLineChart"></canvas>
+                  <canvas id="FlowChart"></canvas>
                 </div>
               </div>
             </div>
