--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,7 @@
           <div class="input-group mb-3">
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1">
-                <img color="primary" src="./assets/icons/svg/user.svg"  width="22" class="d-inline-block align-center" alt="" />
+                <img color="primary" src="./assets/icons/svg/user_log.svg"  width="22" class="d-inline-block align-center" alt="" />
               </span>
             </div>
             <input type="text" class="form-control"  formControlName="username" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
@@ -33,7 +33,7 @@
           <div class="input-group mb-3">
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1">
-                <img color="primary" src="./assets/icons/svg/key(1).svg"  width="22" class="d-inline-block align-center" alt="" />
+                <img color="primary" src="./assets/icons/svg/key_log.svg"  width="22" class="d-inline-block align-center" alt="" />
               </span>
             </div>
             <input type="password" class="form-control" formControlName="password" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1">
@@ -47,13 +47,25 @@
                 </label>
               </div>
             </div>
+            
             <div class="col">
               <div class="register">
-                <a routerLink="/register">Registrarme</a>
+                <a routerLink="/forgetpass">Olvidé mi contraseña</a>
               </div>
             </div>
           </div>
-          <button class="btn btn-success" type="submit">Ingresar</button>
+
+          <div class="row">
+            <div class="col-8">
+               <button class="btn btn-success" style="margin-left:20px;" type="submit">Ingresar</button>
+            </div>
+            
+            <div class="col-2">
+              <div class="register">
+                <button class="btn btn-light" routerLink="/register">Registrarme</button>
+              </div>
+            </div>
+          </div>
         </form>
       </div>
     </div>
