--- a/src/app/add-new-activity/add-new-activity.component.html
+++ b/src/app/add-new-activity/add-new-activity.component.html
@@ -27,7 +27,7 @@
                 <h2 style="margin-top:2%;" >Agregar nueva actividad</h2>
                 <form [formGroup]="Activityform" (ngSubmit)="onSubmit(Activityform.value)">
                   <div class="field">
-                    <div class="row" style="margin-left: 10%;">
+                    <div class="row">
                       <div class="col-2">
                         <img  src="../assets/icons/svg/tools_c.svg"  width="72" class="d-inline-block align-center" alt="">
                       </div>
