--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,12 +20,12 @@
   <div class="page">
     <div class="container">
       <div class="card card-container">
-        <img class="profile-img-card" src="./assets/icons/png/user2.png" alt=""/>
+        <img class="profile-img-card" src="./assets/icons/svg/motorcyclist.png" alt=""/>
         <form [formGroup]="loginForm" (ngSubmit)="loginUser()">
           <div class="input-group mb-3">
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1">
-                <img color="primary" src="./assets/icons/svg/user_log.svg"  width="22" class="d-inline-block align-center" alt="" />
+                <img color="primary" src="./assets/icons/svg/helmet.svg"  width="22" class="d-inline-block align-center" alt="" />
               </span>
             </div>
             <input type="text" class="form-control"  formControlName="username" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
