--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -27,7 +27,7 @@
                 <h2 style="margin-top:2%;">Agregar nuevo producto</h2>
                 <form [formGroup]="Productoform" (ngSubmit)="onSubmit(Productoform.value)">
                   <div class="field">
-                    <div class="row" style="margin-left: 10%;">
+                    <div class="row">
                       <div class="col-2">
                         <img  src="../assets/icons/svg/work_c.svg"  width="72" class="d-inline-block align-center" alt="">
                       </div>
