--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -93,7 +93,7 @@
           </div>
         </div>
 
-        <div class="col" style="margin-top: 1%;">
+        <div class="col-4" style="margin-top: 1%;">
           <div class="box">
             <div class="card shadow mb-2">
               <div class="card-header py-2">
@@ -178,7 +178,7 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col-8">
           <div class="box">
             <div class="card shadow mb-8">
               <div class="card-header py-4">
