--- a/src/app/cliente-detalle/cliente-detalle.component.html
+++ b/src/app/cliente-detalle/cliente-detalle.component.html
@@ -23,14 +23,16 @@
       <div class="content">
           <section class="section section-container" style="padding-bottom: 15px;">
             <div class="box">
-              <div class="row" style="padding-left: 10%;">
-                <div class="col-2">
+              <div class="row" >
+                <div class="col-2" style="padding-left: 10%;">
                   <img  src="../assets/icons/svg/motorcyclist2_c.svg"  width="72" alt="">
                 </div>
                 <div class="col-8">
                   <br>
                   <h2>Datos de cliente</h2>
                   <br>
+                </div>
+                <div class="col-2">
                 </div>
               </div>
             <div class="row">
@@ -44,7 +46,7 @@
                   </div>
                   <div class="list-group-item" *ngIf="!updateEmail" style="border: transparent; background-color:#f8f9f9;">
                     <ul class="list-group list-group-horizontal" style="background-color:#f4f4f4;">
-                      <li class="list-group-item" style="width: 600px; border: transparent; background-color:transparent;">Email:<br> {{cliente.email}}</li>
+                      <li class="list-group-item" style="width: 780px; border: transparent; background-color:transparent;">Email:<br> {{cliente.email}}</li>
                       <button type="button" class="btn btn-sm" (click)="UpdateData('email')">
                          <img  src="../assets/icons/svg/edit(2).svg"  width="20" class="d-inline-block align-center" alt="">
                       </button>
@@ -53,7 +55,7 @@
 
                    <div class="list-group-item" *ngIf="updateEmail" style="border: transparent; background-color:#f8f9f9;">
                     <ul class="list-group list-group-horizontal" style="background-color:#f4f4f4;">
-                      <li class="list-group-item" style="width: 600px; border: transparent; background-color:transparent;">Email:<br>
+                      <li class="list-group-item" style="width: 780px; border: transparent; background-color:transparent;">Email:<br>
                         <div class="row">
                           <div class="col-6">
                             <form [formGroup]="EmailEditform">
@@ -61,7 +63,7 @@
                             </form>
                           </div>
                           <div class="col-2">
-                            <button class="button is-success"  (click)="onSubmitEmail(EmailEditform.value)" style="margin-left: 70%;">Actualizar</button>
+                            <button class="btn btn-success"   (click)="onSubmitEmail(EmailEditform.value)" style="margin-left: 70%;">Actualizar</button>
                           </div>
                         </div>
                       </li>
@@ -84,11 +86,11 @@
                             <div class="row">
                               <div class="col-6">
                                 <form [formGroup]="TelefonoEditform">
-                                  <input class="input" clearInput  type="text" formControlName="nuevoTelefono" value={{cliente.telefono}}>
+                                  <input class="input" style="width: 150px;" clearInput  type="text" formControlName="nuevoTelefono" value={{cliente.telefono}}>
                                 </form>
                               </div>
                               <div class="col-2">
-                                <button class="button is-success"  (click)="onSubmitTelefono(TelefonoEditform.value)" style="margin-left: 70%;">Actualizar</button>
+                                <button class="btn btn-success"   (click)="onSubmitTelefono(TelefonoEditform.value)" style="margin-left: 70%;">Actualizar</button>
                               </div>
                             </div>
                           </li>
@@ -108,11 +110,11 @@
                             <div class="row">
                               <div class="col-6">
                                 <form [formGroup]="CelularEditform">
-                                  <input class="input" clearInput  type="text" formControlName="nuevoCelular" value={{cliente.celular}}>
+                                  <input class="input" style="width: 150px;"  clearInput  type="text" formControlName="nuevoCelular" value={{cliente.celular}}>
                                 </form>
                               </div>
                               <div class="col-2">
-                                <button class="button is-success"  (click)="onSubmitCelular(CelularEditform.value)" style="margin-left: 70%;">Actualizar</button>
+                                <button class="btn btn-success"   (click)="onSubmitCelular(CelularEditform.value)" style="margin-left: 70%;">Actualizar</button>
                               </div>
                             </div>
                           </li>
@@ -123,7 +125,7 @@
 
                   <div class="list-group-item" *ngIf="!updateDireccion" style="border: transparent; background-color:#f8f9f9;">
                     <ul class="list-group list-group-horizontal" style="background-color:#f4f4f4;">
-                      <li class="list-group-item"style="width: 350px; border: transparent; background-color:transparent;">Dirección:<br> {{cliente.dir_calle}} {{cliente.dir_num}} {{cliente.dir_depto}} </li>
+                      <li class="list-group-item"style="width: 450px; border: transparent; background-color:transparent;">Dirección:<br> {{cliente.dir_calle}} {{cliente.dir_num}} {{cliente.dir_depto}} </li>
                       <li class="list-group-item"style="width: 350px; border: transparent; background-color:transparent;"><br> {{cliente.dir_comuna}}, {{cliente.dir_pais}}</li>
                       <button type="button" class="btn btn-sm" (click)="UpdateData('direccion')">
                          <img  src="../assets/icons/svg/edit(2).svg"  width="20" class="d-inline-block align-center" alt="">
@@ -133,20 +135,20 @@
 
                    <div class="list-group-item" *ngIf="updateDireccion" style="border: transparent; background-color:#f8f9f9;">
                     <ul class="list-group list-group-horizontal" style="background-color:#f4f4f4;">
-                      <li class="list-group-item" style="width: 600px; border: transparent; background-color:transparent;">Dirección:<br>
+                      <li class="list-group-item" style="width: 890px; border: transparent; background-color:transparent;">Dirección:<br>
                         <form [formGroup]="DireccionEditform">
                           <div class="row">
-                            <div class="col-8">
+                            <div class="col-6">
                               <h5 style="font-size:small;">Calle</h5>
                               <input class="input" type="text" placeholder="Calle/Población/Villa"  formControlName="Dir_calle" value="{{cliente.dir_calle}}">
                             </div>
-                            <div class="col-2">
+                            <div class="col-3">
                               <h5 style="font-size:small;">Número</h5>
-                              <input class="input" type="text" placeholder="#"  formControlName="Dir_numero" value="{{cliente.dir_num}}">
+                              <input class="input" style="width: 100px;"  type="text" placeholder="#"  formControlName="Dir_numero" value="{{cliente.dir_num}}">
                             </div>
-                            <div class="col-2">
+                            <div class="col-3">
                               <h5 style="font-size:small;">Depto</h5>
-                              <input class="input" type="text" placeholder="#"  formControlName="Dir_depto" value="{{cliente.dir_depto}}">
+                              <input class="input" style="width: 100px;" type="text" placeholder="#"  formControlName="Dir_depto" value="{{cliente.dir_depto}}">
                             </div>
                           </div>
                           <br>
@@ -163,7 +165,7 @@
                         </form>
                         <br>
                         <div class="row">
-                          <button class="button is-success"  (click)="onSubmitDireccion(DireccionEditform.value)" style="margin-left: 70%;">Actualizar
+                          <button class="btn btn-success"   (click)="onSubmitDireccion(DireccionEditform.value)" style="margin-left: 70%;">Actualizar
                           </button>
                         </div>
                       </li>
